--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -1,11 +1,11 @@
 /* Header */
 
 header {
+  @include fontStyles(500);
   display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: $header_bckgrd_color;
-  font-weight: 500;
   padding: .5rem;
   padding-bottom: 1rem;
 
