--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,6 +1,9 @@
 //BUTTON STYLES
 
-
+@mixin fontStyles($font-weight: normal, $font-family: sans-serif) {
+	font-weight: $font-weight;
+	font-family: $font-family;
+}
 
 @mixin headerLinkStyles($text_color, $padding, $border_bttm, $border_right) {
 	color: $text_color;
