--- a/scss/base/_content.scss
+++ b/scss/base/_content.scss
@@ -1,25 +1,23 @@
 /* Content */
 
 h3 {
-	@include fontStyles(400);
+	@include fontStyles($font-weight: 400, $color: $secondary_text_color);
 	@extend %navTextStyle;
-	color: $secondary_text_color;
 	text-align: center;
 	margin: 2rem 0;
 	}
 
 section {
+	@include fontStyles($color: $secondary_text_color);
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
 	background-color: $section_bckgrd_color;
 	padding: 1rem;
 	margin: 0;
-  	color: $secondary_text_color;
 
 	h4 {
-		@include fontStyles(600);
-	  	color: $secondary_text_color;
+		@include fontStyles($font-weight: 600);
 	}
 
 	div {
