--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,8 +1,9 @@
 //BUTTON STYLES
 
-@mixin fontStyles($font-weight: normal, $font-family: sans-serif) {
+@mixin fontStyles($font-weight: normal, $font-family: sans-serif, $color: black) {
 	font-weight: $font-weight;
 	font-family: $font-family;
+	color: $color;
 }
 
 @mixin headerLinkStyles($text_color, $padding, $border_bttm, $border_right) {
